--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="logo"><a href="index.html">Логотип</a></div>
-        <div class="search"><a href="">Поиск</a></div>
+        <div class="search">Поиск</div>
         <div class="basket"><a href="">Корзина</a></div>
         <div class="authorization"><a href="register.html">Личный кабинет</a></div>
     </header>
