--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
     <form>
         <input type="email" placeholder="Email address" /><br>
         <input type="password" placeholder="***********"/><br>
+        <input type="checkbox" value="remember"/> Remember me<br>
         <input type="submit" value="Sign In" /><br>
     </form>
     <a class="register" href="register.html">Register</a>
