Reg page edit and css file

--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
     <form>
         <input type="email" placeholder="Email address" /><br>
         <input type="password" placeholder="***********"/><br>        
-        <input type="submit" value="Register" /><br>
+        <input class="view" type="submit" value="Register" /><br>
     </form>
     <a class="register" href="login.html">Sign In</a>
     </div>
