--- a/index.html
+++ b/index.html
@@ -3,32 +3,30 @@
 <head>
 	<meta charset="utf-8">
     <title>Home page</title>
-	<link rel="stylesheet" media="screen"  href="style.css">
+	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html">Логотип</a></div>
-        <div class="search">Поиск</div>
-        <div class="basket"><a href="">Корзина</a></div>
-        <div class="authorization"><a href="register.html">Личный кабинет</a></div>
+        <div ><a class="logo" href="index.html">Логотип</a></div>
+        <div class="search"><input placeholder="Search"/></div>
+        <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
+        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
     </header>
     <section>
-        <div class="tab-content">
-            <div class="layoutCategories Categories">Категория1</div>        
-            <div class="layoutCategories Categories">Категория2</div>
-            <div class="layoutCategories Categories">Категория3</div>
-            <div class="layoutCategories Categories">Категория4</div>
-            <div class="layoutCategories Categories">Категория5</div>
-            <div class="layoutCategories Categories">Категория6</div>
-            <div class="layoutCategories Categories">Категория7</div>
-            <div class="layoutCategories Categories">Категория8</div>
-            <div class="layoutCategories Categories">Категория9</div>
-            <div class="layoutCategories Categories">Категория10</div>
-            <div class="layoutCategories Categories">Категория11</div>
-            <div class="layoutCategories Categories">Категория12</div>
-            <div class="layoutCategories Categories">Категория12</div>
-            <div class="layoutCategories Categories">Категория12</div>
-        </div>    
+            <div class="tab-content-layout">
+                <div>
+                    <ul class="tab-content">
+            <li class="layoutCategories "><a class="Categories Cooling" href=""></a><div>Cooling</div></li>
+            <li class="layoutCategories "><a class="Categories CPU" href=""></a><div>CPU</div></li>
+            <li class="layoutCategories "><a class="Categories HDD" href=""></a><div>HDD</div></li>
+            <li class="layoutCategories "><a class="Categories Motherboard" href=""></a><div>Motherboard</div></li>
+            <li class="layoutCategories "><a class="Categories powerSource" href=""></a><div>Power source</div></li>
+            <li class="layoutCategories "><a class="Categories Processor" href=""></a><div>Processor</div></li>
+            <li class="layoutCategories "><a class="Categories RAM" href=""></a><div>RAM</div></li>
+            <li class="layoutCategories "><a class="Categories videoAdapter" href=""></a><div>Video adapter</div></li>
+                    </ul>
+                </div>
+            </div>    
     </section>
     <footer>footer </footer>
 </body>
