--- a/register.html
+++ b/register.html
@@ -3,13 +3,15 @@
 <head>
 	<meta charset="utf-8">
     <title>Register form</title>
-	<link rel="stylesheet" media="screen"  href="style.css">
+	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
     <div class="login">
         <a class="close" href=""></a>       
     <form>
+        Email
         <input type="email" placeholder="Email address" /><br>
+        Password
         <input type="password" placeholder="***********"/><br>        
         <input class="view" type="submit" value="Register" /><br>
     </form>
