--- a/login.html
+++ b/login.html
@@ -3,14 +3,16 @@
 <head>
 	<meta charset="utf-8">
     <title>Login form</title>
-	<link rel="stylesheet" media="screen"  href="style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="login">
         <a class="close" href=""></a>
         <p>Please Sign In</p>
     <form>
+        Email
         <input type="email" placeholder="Email address" /><br>
+        Password
         <input type="password" placeholder="***********"/><br>
         <input type="checkbox" value="remember"/> Remember me<br>
         <input type="submit" value="Sign In" /><br>
