--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <div class="tab-content-layout">
                 <div>
                     <ul class="tab-content">
-            <li class="layoutCategories "><a class="Categories Cooling" href=""></a><div>Cooling</div></li>
-            <li class="layoutCategories "><a class="Categories CPU" href=""></a><div>CPU</div></li>
-            <li class="layoutCategories "><a class="Categories HDD" href=""></a><div>HDD</div></li>
-            <li class="layoutCategories "><a class="Categories Motherboard" href=""></a><div>Motherboard</div></li>
-            <li class="layoutCategories "><a class="Categories powerSource" href=""></a><div>Power source</div></li>
-            <li class="layoutCategories "><a class="Categories Processor" href=""></a><div>Processor</div></li>
-            <li class="layoutCategories "><a class="Categories RAM" href=""></a><div>RAM</div></li>
-            <li class="layoutCategories "><a class="Categories videoAdapter" href=""></a><div>Video adapter</div></li>
+            <li class="layoutCategories "><a class="Categories Cooling" href=""><div class="imgCooling"><div>Cooling</div></div> </a></li>
+            <li class="layoutCategories "><a class="Categories CPU" href=""><span class="imgCPU"><div>CPU</div></span> </a></li>
+            <li class="layoutCategories "><a class="Categories HDD" href=""><span class="imgHDD"><div>HDD</div></span> </a></li>
+            <li class="layoutCategories "><a class="Categories Motherboard" href=""><span class="imgMotherboard"><div>Motherboard</div></span> </a></li>
+            <li class="layoutCategories "><a class="Categories powerSource" href=""><span class="imgPowerSource"><div>Power source</div></span> </a></li>
+            <li class="layoutCategories "><a class="Categories Processor" href=""><span class="imgProcessor"><div>Processor</div></span> </a></li>
+            <li class="layoutCategories "><a class="Categories RAM" href=""><span class="imgRAM"><div>RAM</div></span> </a></li>
+            <li class="layoutCategories "><a class="Categories videoAdapter" href=""><span class="imgvideoAdapter"><div>Video adapter</div></span> </a></li>
                     </ul>
                 </div>
             </div>    
