--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="login">
-        <a class="close" href=""></a>       
+        <a class="close" href="index.html"></a>       
     <form>
         Email
         <input type="email" placeholder="Email address" /><br>
