--- a/Menu.html
+++ b/Menu.html
@@ -2,19 +2,26 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Items</title>
+	<title>Menu</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<menu type="toolbar" class="navbar">
-		<li><a href="#">Motherboard</a></li>
-		<li><a href="#">CPU</a></li>
-		<li><a href="#">RAM</a></li>		
-		<li><a href="#">Video adapter</a></li>
-		<li><a href="#">HDD</a></li>
-		<li><a href="#">Power source</a></li>
-		<li><a href="#">Cooling</a></li>	
+    <header>
+        <div ><a class="logo" href="index.html">Логотип</a></div>
+        <div class="search"><input placeholder="Search"/></div>
+        <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
+        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
+    </header>
+	<menu type="toolbar" class="navbar">       
+        <li><div><a class="menumother" href=""><span class="menumother-img"></span>Motherboard</a></div></li>
+        <li><div></div><a class="menucpu" href=""><span class="menucpu-img"></span>CPU</a></div></li>
+    <li><div><a class="menuram" href=""><span class="menuram-img"></span>RAM</a></div></li>		
+    <li><div><a class="menuvideo" href=""><span class="menuvideo-img"></span>Video adapter</a></div></li>
+    <li><div><a class="menuhdd" href=""><span class="menuhdd-img"></span>HDD</a></div></li>
+    <li><div><a class="menupower" href=""><span class="menupower-img"></span>Power source</a></div></li>
+    <li><div><a class="menucooling" href=""><span class="menucooling-img"></span>Cooling</a></div></li>    
 	</menu>
+<footer>footer</footer>
 </body>
 </html>
