--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="login">
-        <a class="close" href="index.html"></a>
+        <a class="close" href="index.html">X</a>
         <p>Please Sign In</p>
     <form>
         Email
