Copy for repository

--- a/Motherboard.html
+++ b/Motherboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>Home page</title>
+    <title>Motherboard</title>
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
@@ -12,6 +12,15 @@
         <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
         <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
     </header>
+    <menu type="toolbar" class="navbar">
+		<li><a href="#">Motherboard</a></li>
+		<li><a href="#">CPU</a></li>
+		<li><a href="#">RAM</a></li>		
+		<li><a href="#">Video adapter</a></li>
+		<li><a href="#">HDD</a></li>
+		<li><a href="#">Power source</a></li>
+		<li><a href="#">Cooling</a></li>	
+	</menu>    
     <section>
             <div class="tab-content-layout">
                 <ul class="tab-content">
