--- a/Menu.html
+++ b/Menu.html
@@ -6,22 +6,15 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <header>
-        <div ><a class="logo" href="index.html">Логотип</a></div>
-        <div class="search"><input placeholder="Search"/></div>
-        <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
-        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
-    </header>
+<body>    
 	<menu type="toolbar" class="navbar">       
-        <li><div><a class="menumother" href=""><span class="menumother-img"></span>Motherboard</a></div></li>
-        <li><div></div><a class="menucpu" href=""><span class="menucpu-img"></span>CPU</a></div></li>
-    <li><div><a class="menuram" href=""><span class="menuram-img"></span>RAM</a></div></li>		
-    <li><div><a class="menuvideo" href=""><span class="menuvideo-img"></span>Video adapter</a></div></li>
-    <li><div><a class="menuhdd" href=""><span class="menuhdd-img"></span>HDD</a></div></li>
-    <li><div><a class="menupower" href=""><span class="menupower-img"></span>Power source</a></div></li>
-    <li><div><a class="menucooling" href=""><span class="menucooling-img"></span>Cooling</a></div></li>    
+        <li><div><a class="menumother" href="Motherboard.html"><span class="menumother-img"></span>Motherboard</a></div></li>
+        <li><div></div><a class="menucpu" href="CPU.html"><span class="menucpu-img"></span>CPU</a></div></li>
+    <li><div><a class="menuram" href="RAM.html"><span class="menuram-img"></span>RAM</a></div></li>		
+    <li><div><a class="menuvideo" href="videoAAdapter.html"><span class="menuvideo-img"></span>Video adapter</a></div></li>
+    <li><div><a class="menuhdd" href="HDD.html"><span class="menuhdd-img"></span>HDD</a></div></li>
+    <li><div><a class="menupower" href="powerSource.html"><span class="menupower-img"></span>Power source</a></div></li>
+    <li><div><a class="menucooling" href="cooling.html"><span class="menucooling-img"></span>Cooling</a></div></li>    
 	</menu>
-<footer>footer</footer>
 </body>
 </html>
