--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
         <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
     </header>
+    
     <section>
       <div class="tab-content-layout">
          <ul class="tab-content">
             <li class="layoutCategories "><a class="Categories Cooling" href=""><div class="imgCooling"><div>Cooling</div></div> </a></li>
             <li class="layoutCategories "><a class="Categories CPU" href=""><span class="imgCPU"><div>CPU</div></span> </a></li>
             <li class="layoutCategories "><a class="Categories HDD" href=""><span class="imgHDD"><div>HDD</div></span> </a></li>
-            <li class="layoutCategories "><a class="Categories Motherboard" href=""><span class="imgMotherboard"><div>Motherboard</div></span> </a></li>
+            <li class="layoutCategories "><a class="Categories Motherboard" href="Motherboard.html"><span class="imgMotherboard"><div>Motherboard</div></span> </a></li>
             <li class="layoutCategories "><a class="Categories powerSource" href=""><span class="imgPowerSource"><div>Power source</div></span> </a></li>
             <li class="layoutCategories "><a class="Categories RAM" href=""><span class="imgRAM"><div>RAM</div></span> </a></li>
             <li class="layoutCategories "><a class="Categories videoAdapter" href=""><span class="imgvideoAdapter"><div>Video adapter</div></span> </a></li>
