--- a/productdescription.html
+++ b/productdescription.html
@@ -15,16 +15,29 @@
     <section>
         <div class="productLayout">
             <div class="productDescription">
+
+                <div class="slider-img">
                 <ol class="breadcrumb">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="">Категория</a></li>
                     <li>Товар</li>
                 </ol>
-                <div class="slider-img">
                     <div class="bigImg"></div>
-                    <div class="minImg"></div>
+                    <div class="minImg">
+                        <
+                        <img src="img/CPU/Intel/Intel%20Pentium%20G2020%20OEM.jpg"/>
+                        <img src="img/CPU/Intel/Intel%20Pentium%20G3220%20BOX.jpg"/>
+                        <img src="img/CPU/Intel/Intel%20Pentium%20G3420%20OEM.jpg"/>
+                        <img src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/> 
+                        <img src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/> >
+                    </div>
                 </div>
-                <div class="description"></div>
+                <div class="layoutDescription"> 
+                    <span> Товар</span>
+                        <div class="imgStar"><div class="raiting"></div></div>
+                        <p class="description"> Технические характеристики Процессор Intel Celeron G1820 OEM Intel Celeron четвертого поколения, тактовая частота 2700 МГц, тепловыделение 53 Ватт, сокет LGA 1150, двухканальный режим памяти.</p>
+                    <input type="number" min="1" max="100" value="1">  
+                </div>
             </div>
         </div>
     </section>
