--- a/productdescription.html
+++ b/productdescription.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="layoutDescription"> 
-                    <span> Товар</span>
+                    <h1> Товар</h1>
                         <div class="imgStar"><div class="raiting"></div></div>
                         <p class="description"> Технические характеристики Процессор Intel Celeron G1820 OEM Intel Celeron четвертого поколения, тактовая частота 2700 МГц, тепловыделение 53 Ватт, сокет LGA 1150, двухканальный режим памяти.</p>
                     <input type="number" min="1" max="100" value="1">  
