--- a/productdescription.html
+++ b/productdescription.html
@@ -22,25 +22,38 @@
                     <li><a href="">Категория</a></li>
                     <li>Товар</li>
                 </ol>
-                    <div class="bigImg"></div>
+                <div class="sliderLayout">
+                    <div class="bigImgPositioner">
+                         <img src="img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg "/>
+                    </div>
                     <div class="minImg">
-                        <
+                        <a href=""><div class="arrowLeft"></div></a>
                         <img src="img/CPU/Intel/Intel%20Pentium%20G2020%20OEM.jpg"/>
                         <img src="img/CPU/Intel/Intel%20Pentium%20G3220%20BOX.jpg"/>
                         <img src="img/CPU/Intel/Intel%20Pentium%20G3420%20OEM.jpg"/>
                         <img src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/> 
-                        <img src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/> >
+                        <img src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/>
+                        <a href=""><div class="arrowRight"></div></a>
                     </div>
                 </div>
+                </div>
                 <div class="layoutDescription"> 
-                    <h1> Товар</h1>
-                        <div class="imgStar"><div class="raiting"></div></div>
-                        <p class="description"> Технические характеристики Процессор Intel Celeron G1820 OEM Intel Celeron четвертого поколения, тактовая частота 2700 МГц, тепловыделение 53 Ватт, сокет LGA 1150, двухканальный режим памяти.</p>
-                    <input type="number" min="1" max="100" value="1">  
+                    <div class="description">
+                        <h1> Товар </h1>
+                            <div class="imgStar">
+                        <div class="raiting"></div>
+                            </div>
+                    <p>Технические характеристики Процессор Intel Celeron G1820 OEM Intel Celeron четвертого поколения, тактовая частота 2700 МГц, тепловыделение 53 Ватт, сокет LGA 1150, двухканальный режим памяти.</p>
+                    <input type="number" min="1" max="100" value="1"> 
+                        <div class="addCartLoyout">
+                        <div class="price">Price: $555</div>
+                        <a href="orderForm.html"><div class="addCart">Add to cart</div></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <footer>footer </footer>
+    <footer>footer                        </footer>
 </body>
 </html>
