--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <section>
       <div class="tab-content-layout">
          <ul class="tab-content">
-            <li class="layoutCategories "><a class="Categories Cooling" href=""><div class="imgCooling"><div>Cooling</div></div> </a></li>
-            <li class="layoutCategories "><a class="Categories CPU" href=""><span class="imgCPU"><div>CPU</div></span> </a></li>
-            <li class="layoutCategories "><a class="Categories HDD" href=""><span class="imgHDD"><div>HDD</div></span> </a></li>
-            <li class="layoutCategories "><a class="Categories Motherboard" href="Motherboard.html"><span class="imgMotherboard"><div>Motherboard</div></span> </a></li>
-            <li class="layoutCategories "><a class="Categories powerSource" href=""><span class="imgPowerSource"><div>Power source</div></span> </a></li>
-            <li class="layoutCategories "><a class="Categories RAM" href=""><span class="imgRAM"><div>RAM</div></span> </a></li>
-            <li class="layoutCategories "><a class="Categories videoAdapter" href=""><span class="imgvideoAdapter"><div>Video adapter</div></span> </a></li>
+            <li class="layoutCategories "><a class="Categories Cooling" href=""><div class="imgCooling"></div>Cooling</a></li>
+            <li class="layoutCategories "><a class="Categories CPU" href=""><div class="imgCPU"></div>CPU</a></li>
+            <li class="layoutCategories "><a class="Categories HDD" href=""><div class="imgHDD"></div>HDD</a></li>
+            <li class="layoutCategories "><a class="Categories Motherboard" href="Motherboard.html"><div class="imgMotherboard"></div>Motherboard </a></li>
+            <li class="layoutCategories "><a class="Categories powerSource" href=""><div class="imgPowerSource"></div>Power source</a></li>
+            <li class="layoutCategories "><a class="Categories RAM" href=""><div class="imgRAM"></div>RAM</a></li>
+            <li class="layoutCategories "><a class="Categories videoAdapter" href=""><div class="imgvideoAdapter"></div>Video adapter</a></li>
         </ul>
        </div>            
     </section>
