--- a/orderForm.html
+++ b/orderForm.html
@@ -79,6 +79,9 @@
                 <div class="line4">
                         <input type="text" autofocus="off" maxlength="3" placeholder="CVC">
                 </div>
+                <div class="line5">
+                        <input type="submit" value="Finish">
+                </div>
                     </form>
             </div>
         </div>            
