--- a/powerSource.html
+++ b/powerSource.html
@@ -36,16 +36,16 @@
         $205        
     </div>
     <div class="square">
-        <a href="productdescription.html"><div class="imgItem powerImg2"></div>Be Quiet PURE POWER L8 700W [BN225]</a><br>
-        $205        
+        <a href="productdescription.html"><div class="imgItem powerImg2"></div>Chieftec A-135 Series 650W [APS-650SB]</a><br>
+        $305        
     </div>
     <div class="square">
-        <a href="productdescription.html"><div class="imgItem powerImg3"></div>Be Quiet PURE POWER L8 700W [BN225]</a><br>
-        $205        
+        <a href="productdescription.html"><div class="imgItem powerImg3"></div>Thermaltake TR2 600W [TR-600P]</a><br>
+        $255        
     </div>
     <div class="square">
-        <a href="productdescription.html"><div class="imgItem powerImg4"></div>Be Quiet PURE POWER L8 700W [BN225]</a><br>
-        $205        
+        <a href="productdescription.html"><div class="imgItem powerImg4"></div>Zalman GVM 850W [ZM850-GVM]</a><br>
+        $275        
     </div>
     <div class="square">
         <a href="productdescription.html"><div class="imgItem powerImg1"></div>Be Quiet PURE POWER L8 700W [BN225]</a><br>
