--- a/productdescription.html
+++ b/productdescription.html
@@ -19,7 +19,7 @@
                 <div class="slider-img">
                 <ol class="breadcrumb">
                     <li><a href="index.html">Главная</a></li>
-                    <li><a href="">Категория</a></li>
+                    <li><a href="Motherboard.html">Категория</a></li>
                     <li>Товар</li>
                 </ol>
                 <div class="sliderLayout">
