--- a/productdescription.html
+++ b/productdescription.html
@@ -38,22 +38,30 @@
                 </div>
                 </div>
                 <div class="layoutDescription"> 
-                    <div class="description">
-                        <h1> Товар </h1>
-                            <div class="imgStar">
-                        <div class="raiting"></div>
-                            </div>
+                    <h1> Товар </h1>
+                        <div class="imgStar">
+                    <div class="raiting"></div>
+                         </div>
                     <p>Технические характеристики Процессор Intel Celeron G1820 OEM Intel Celeron четвертого поколения, тактовая частота 2700 МГц, тепловыделение 53 Ватт, сокет LGA 1150, двухканальный режим памяти.</p>
                     <input type="number" min="1" max="100" value="1"> 
                         <div class="addCartLoyout">
-                        <div class="price">Price: $555</div>
-                        <a href="orderForm.html"><div class="addCart">Add to cart</div></a>
+                            <div class="price">Price: $555</div>
+                            <a href="orderForm.html">
+                                <div class="addCart">Add to cart
+                                </div>
+                            </a>
                         </div>
+                    <div class="lineSocial">
+                        <a href=""><span class="twitter"></span></a>
+                        <a href=""><span class="vkontakte"></span></a>
+                        <a href=""><span class="facebook"></span></a>
+                        <a href=""><span class="instagram"></span></a>
+                        <a href=""><span class=""></span></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <footer>footer                        </footer>
+    <footer>footer</footer>
 </body>
 </html>
