--- a/Motherboard.html
+++ b/Motherboard.html
@@ -17,7 +17,7 @@
     </header>
     
 <!--Menu(All pages)-->
-    
+    <section>
 <menu type="toolbar" class="navbar">       
     <li>
         <div>
@@ -155,6 +155,7 @@
         $650        
     </div>    
 </div>
+        </section>
 <footer>footer</footer>
 </body>
 </html>
