--- a/MotherboardList.html
+++ b/MotherboardList.html
@@ -12,8 +12,16 @@
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
-        <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
-        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
+        <div >
+            <a class="basket" href="">
+            <span class="basket-img"></span>Корзина
+            </a>
+        </div>
+        <div >
+            <a class="authorization" href="register.html">
+                <span class="authorization-img"></span>Личный кабинет
+            </a>
+        </div>
     </header>
     
 <!--Menu(All pages)-->
@@ -87,7 +95,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -105,7 +113,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -124,7 +132,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -142,7 +150,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -160,7 +168,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -178,7 +186,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -196,7 +204,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -214,7 +222,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -232,7 +240,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -250,7 +258,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
@@ -268,7 +276,7 @@
                 </p>
             </div>
             <div class="addCartCategory">
-                <a href="orderForm.html">
+                <a href="CartPage.html">
                     <div class="addCartItem">Add to cart</div>
                 </a>
             </div>
