--- a/login.html
+++ b/login.html
@@ -6,18 +6,27 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="login">
-        <a class="close" href="index.html">X</a>
-        <p>Please Sign In</p>
-    <form>
-        Email
-        <input type="email" placeholder="Email address" /><br>
-        Password
-        <input type="password" placeholder="***********"/><br>
-        <input type="checkbox" value="remember"/> Remember me<br>
-        <input type="submit" value="Sign In" /><br>
-    </form>
-    <a class="register" href="register.html">Register</a>
-    </div>
+    <header>
+        <div ><a class="logo" href="index.html">Логотип</a></div>
+        <div class="search"><input placeholder="Search"/></div>
+        <div ><a class="basket " href=""><span class="basket-img"></span>Корзина</a></div>
+        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
+    </header>
+    <section>
+        <div class="login">
+            <a class="close" href="index.html">X</a>
+            <p>Please Sign In</p>
+        <form>
+            Email
+            <input type="email" placeholder="Email address" /><br>
+            Password
+            <input type="password" placeholder="***********"/><br>
+            <input type="checkbox" value="remember"/> Remember me<br>
+            <input type="submit" value="Sign In" /><br>
+        </form>
+        <a class="register" href="register.html">Register</a>
+        </div>
+    </section>
+    <footer>footer </footer>
 </body>
 </html>
