--- a/register.html
+++ b/register.html
@@ -6,16 +6,26 @@
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
+    <header>
+        <div ><a class="logo" href="index.html">Логотип</a></div>
+        <div class="search"><input placeholder="Search"/></div>
+        <div ><a class="basket " href=""><span class="basket-img"></span>Корзина</a></div>
+        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
+    </header>
+    <section>
     <div class="login">
-        <a class="close" href="index.html">X</a>       
-    <form>
-        Email
-        <input type="email" placeholder="Email address" /><br>
-        Password
-        <input type="password" placeholder="***********"/><br>        
-        <input class="view" type="submit" value="Register" /><br>
-    </form>
-    <a class="register" href="login.html">Sign In</a>
+            <a class="close" href="index.html">X</a>       
+        <form>
+            Email
+            <input type="email" placeholder="Email address" /><br>
+            Password
+            <input type="password" placeholder="***********"/><br>        
+            <input class="view" type="submit" value="Register" /><br>
+        </form>
+        <a class="register" href="login.html">Sign In</a>
     </div>
+
+    </section>
+    <footer>footer </footer>
 </body>
 </html>
