--- a/productdescription.html
+++ b/productdescription.html
@@ -43,6 +43,7 @@
                     <div class="raiting"></div>
                          </div>
                     <p>Технические характеристики Процессор Intel Celeron G1820 OEM Intel Celeron четвертого поколения, тактовая частота 2700 МГц, тепловыделение 53 Ватт, сокет LGA 1150, двухканальный режим памяти.</p>
+                    <p><label for="quantiti">Quantiti</label></p>
                     <input type="number" min="1" max="100" value="1"> 
                         <div class="addCartLoyout">
                             <div class="price">Price: $555</div>
