--- a/productdescription.html
+++ b/productdescription.html
@@ -46,7 +46,7 @@
                     <input type="number" min="1" max="100" value="1"> 
                         <div class="addCartLoyout">
                             <div class="price">Price: $555</div>
-                            <a href="orderForm.html">
+                            <a href="CartPage.html">
                                 <div class="addCart">Add to cart
                                 </div>
                             </a>
