--- a/Motherboard.html
+++ b/Motherboard.html
@@ -21,7 +21,7 @@
 <menu type="toolbar" class="navbar">       
     <li>
         <div>
-            <a class="menumother" href="Motherboard.html">
+            <a class="menumother activeTitle" href="Motherboard.html">
                 <div class="menumother-img"></div>Motherboard
             </a>
         </div>
