--- a/MotherboardList.html
+++ b/MotherboardList.html
@@ -27,11 +27,9 @@
 <!--Menu(All pages)-->
     <section>
 <menu type="toolbar" class="navbar">       
-    <a class="menumother" href="Motherboard.html"><li>
-        <div>
-            
-                <div class="menumother-img"></div>Motherboard
-            
+    <a class="menumother activeTitle" href="Motherboard.html"><li>
+        <div>           
+                <div class="menumother-img"></div>Motherboard            
         </div>
     </li></a>
     <li>
@@ -88,7 +86,7 @@
         <div class="imgItemList motherImg1"></div>
         <div class="inform">
             <div class="linkProperties">
-                <a href="productdescription.html">GIGABYTE GA-78LMT-S2</a>               </div>
+                <a href="productdescription.html">GIGABYTE GA-78LMT-S2</a>                       </div>
             <div class="listPrice">Price: $555</div>
             <div class="itemsInfo">
                 <p>Скажите НЕТ долгой загрузке ОС! MSI Fast Boot помогает системе молниеносно загружаться. Установленная на плате специальная кнопка GO2BIOS. Просто нажмите на нее и перезагрузите компьютер. При старте компьютера Вы автоматически войдете в настройки БИОС.
