--- a/cooling.html
+++ b/cooling.html
@@ -12,8 +12,9 @@
         <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
         <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
     </header>
-<!--Menu(All pages)-->
     
+<!--Menu(All pages)-->
+<section>
 <menu type="toolbar" class="navbar">       
     <li><div><a class="menumother" href="Motherboard.html"><div class="menumother-img"></div>Motherboard</a></div></li>
     <li><div></div><a class="menucpu" href="CPU.html"><div class="menucpu-img"></div>CPU</a></div></li>
@@ -21,7 +22,13 @@
     <li><div><a class="menuvideo" href="videoAAdapter.html"><div class="menuvideo-img"></div>Video adapter</a></div></li>
     <li><div><a class="menuhdd" href="HDD.html"><div class="menuhdd-img"></div>HDD</a></div></li>
     <li><div><a class="menupower" href="powerSource.html"><div class="menupower-img"></div>Power source</a></div></li>
-    <li><div><a class="menucooling" href="cooling.html"><div class="menucooling-img"></div>Cooling</a></div></li>    
+    <li>
+        <div>
+            <a class="menucooling activeTitle" href="cooling.html">
+                <div class="menucooling-img"></div>Cooling
+            </a>
+        </div>
+    </li>    
 </menu>
 
 <!--Main path-->
@@ -86,9 +93,9 @@
     <div class="square">
         <a href="productdescription.html"><div class="imgItem coolImg3"></div>Zalman CNPS5X</a><br>
         $650        
-    </div>
-    
+    </div>    
 </div>
+</section>
 <footer>footer</footer>
 </body>
 </html>
