--- a/AddressPage.html
+++ b/AddressPage.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
@@ -69,11 +70,12 @@
             </div>
             
             <div class="line5">
-                <input type="submit" value="Continue">
+                <a href="orderForm.html"><input type="submit" value="Continue"/></a> 
             </div>
             </form>
         </div>
     </section>
+    </div>
     <footer>footer</footer>
 </body>
 </html>
