--- a/HDD.html
+++ b/HDD.html
@@ -9,7 +9,7 @@
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
-        <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
+        <div ><a class="basket" href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
         <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
     </header>
  <!--Menu(All pages)-->
