--- a/MotherboardList.html
+++ b/MotherboardList.html
@@ -13,7 +13,7 @@
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
         <div >
-            <a class="basket" href="">
+            <a class="basket" href="CartPage.html">
             <span class="basket-img"></span>Корзина
             </a>
         </div>
