--- a/login.html
+++ b/login.html
@@ -6,10 +6,11 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
-        <div ><a class="basket " href=""><span class="basket-img"></span>Корзина</a></div>
+        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
         <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
     </header>
     <section>
@@ -27,6 +28,7 @@
         <a class="register" href="register.html">Register</a>
         </div>
     </section>
+    </div>
     <footer>footer </footer>
 </body>
 </html>
