--- a/productdescription.html
+++ b/productdescription.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
@@ -64,5 +65,6 @@
         </div>
     </section>
     <footer>footer</footer>
+    </div>
 </body>
 </html>
