--- a/CPU.html
+++ b/CPU.html
@@ -12,9 +12,9 @@
     <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
-        <div class="search"><input placeholder="Search"/></div>
-        <div ><a class="basket" href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
         <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
+        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
+        <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
 
     
@@ -22,13 +22,52 @@
     
 <section>
 <menu type="toolbar" class="navbar">       
-    <li><div><a class="menumother" href="Motherboard.html"><div class="menumother-img"></div>Motherboard</a></div></li>
-    <li><div></div><a class="menucpu activeTitle" href="CPU.html"><div class="menucpu-img"></div>CPU</a></div></li>
-    <li><div><a class="menuram" href="RAM.html"><div class="menuram-img"></div>RAM</a></div></li>		
-    <li><div><a class="menuvideo" href="videoAAdapter.html"><div class="menuvideo-img"></div>Video adapter</a></div></li>
-    <li><div><a class="menuhdd" href="HDD.html"><div class="menuhdd-img"></div>HDD</a></div></li>
-    <li><div><a class="menupower" href="powerSource.html"><div class="menupower-img"></div>Power source</a></div></li>
-    <li><div><a class="menucooling" href="cooling.html"><div class="menucooling-img"></div>Cooling</a></div></li>    
+    <a class="menumother activeTitle" href="Motherboard.html"><li>
+        <div>           
+                <div class="menumother-img"></div>Motherboard            
+        </div>
+    </li></a>
+    <li>
+        <div>
+            <a class="menucpu" href="CPU.html">
+                <div class="menucpu-img"></div>CPU
+            </a>
+        </div>
+    </li>
+    <li>
+        <div>
+            <a class="menuram" href="RAM.html">
+                <div class="menuram-img"></div>RAM</a>
+        </div>
+    </li>		
+    <li>
+        <div>
+            <a class="menuvideo" href="videoAAdapter.html">
+                <div class="menuvideo-img"></div>Video adapter
+            </a>
+        </div>
+    </li>
+    <li>
+        <div>
+            <a class="menuhdd" href="HDD.html">
+                <div class="menuhdd-img"></div>HDD
+            </a>
+        </div>
+    </li>
+    <li>
+        <div>
+            <a class="menupower" href="powerSource.html">
+                <div class="menupower-img"></div>Power source
+            </a>
+        </div>
+    </li>
+    <li>
+        <div>
+            <a class="menucooling" href="cooling.html">
+                <div class="menucooling-img"></div>Cooling
+            </a>
+        </div>
+    </li>    
 </menu>
 
 <!--Main path-->
