--- a/RAM.html
+++ b/RAM.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
@@ -17,13 +18,52 @@
 
 <section>
 <menu type="toolbar" class="navbar">       
-    <li><div><a class="menumother" href="Motherboard.html"><div class="menumother-img"></div>Motherboard</a></div></li>
-    <li><div></div><a class="menucpu" href="CPU.html"><div class="menucpu-img"></div>CPU</a></div></li>
-    <li><div><a class="menuram activeTitle" href="RAM.html"><div class="menuram-img"></div>RAM</a></div></li>		
-    <li><div><a class="menuvideo" href="videoAAdapter.html"><div class="menuvideo-img"></div>Video adapter</a></div></li>
-    <li><div><a class="menuhdd" href="HDD.html"><div class="menuhdd-img"></div>HDD</a></div></li>
-    <li><div><a class="menupower" href="powerSource.html"><div class="menupower-img"></div>Power source</a></div></li>
-    <li><div><a class="menucooling" href="cooling.html"><div class="menucooling-img"></div>Cooling</a></div></li>    
+    <a class="menumother activeTitle" href="Motherboard.html"><li>
+        <div>           
+                <div class="menumother-img"></div>Motherboard            
+        </div>
+    </li></a>
+    <li>
+        <div>
+            <a class="menucpu" href="CPU.html">
+                <div class="menucpu-img"></div>CPU
+            </a>
+        </div>
+    </li>
+    <li>
+        <div>
+            <a class="menuram" href="RAM.html">
+                <div class="menuram-img"></div>RAM</a>
+        </div>
+    </li>		
+    <li>
+        <div>
+            <a class="menuvideo" href="videoAAdapter.html">
+                <div class="menuvideo-img"></div>Video adapter
+            </a>
+        </div>
+    </li>
+    <li>
+        <div>
+            <a class="menuhdd" href="HDD.html">
+                <div class="menuhdd-img"></div>HDD
+            </a>
+        </div>
+    </li>
+    <li>
+        <div>
+            <a class="menupower" href="powerSource.html">
+                <div class="menupower-img"></div>Power source
+            </a>
+        </div>
+    </li>
+    <li>
+        <div>
+            <a class="menucooling" href="cooling.html">
+                <div class="menucooling-img"></div>Cooling
+            </a>
+        </div>
+    </li>    
 </menu>
 
 <!--Main path-->
@@ -72,6 +112,7 @@
     </div>   
 </div>
 </section>
+</div>
 <footer>footer</footer>
 </body>
 </html>
