--- a/CartPage.html
+++ b/CartPage.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
@@ -105,6 +106,7 @@
             </div>
         </div>        
     </section>
+    </div>
     <footer>footer </footer>
 </body>
 </html>
